# Android00

./: .env.example  .gitignore  Constraints.md  EXAMPLES.md  KNOWLEDGE.md  Plan.md  Progress.md  example.md  gen_scripts.py  project.toml  promt.md  pyproject.toml  setup_env_.sh  techstack.md
androidaudit/: cli.py  config.py  exceptions.py  findings.py  session.py
androidaudit/modules/dynamic/: frida_runner.py  logcat.py
androidaudit/modules/dynamic/scripts/: biometric_bypass.js  crypto_interceptor.js  intent_monitor.js  method_tracer.js  root_detection_bypass.js  ssl_pinning_bypass.js
androidaudit/modules/network/: mitm.py  ssl_setup.py
androidaudit/modules/static/: apk_parser.py  crypto_check.py  manifest.py  secret_scan.py
androidaudit/modules/storage/: inspector.py  puller.py
androidaudit/report/: cvss.py  engine.py
androidaudit/report/templates/: report.html.j2  summary.md.j2
test/: conftest.py
tests/: conftest.py  test_session.py  test_static.py
